# gl-lessons

./: .gitignore  README.md
color-triangle/: recompile.sh
hello-2-triangles/src/: main.cpp
hello-rectangle/src/: main.cpp
hello-triangle/src/: glad.c  main.cpp
hello-window/: CMakeLists.txt
hello-window/src/: main.cpp
test/include/glad/: glad.h
test/src/: main.cpp
